--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
   flutter_bounceable: ^1.2.0
+  firebase_core: ^4.0.0
+  cloud_firestore: ^6.0.0
   
 
 dev_dependencies:
