--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   firebase_core: ^4.0.0
   cloud_firestore: ^6.0.0
   intl: ^0.20.2
+  flutter_easyloading: ^3.0.5
+  bot_toast: ^4.1.3
   
 
 dev_dependencies:
