--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
   flutter_bounceable: ^1.2.0
   firebase_core: ^4.0.0
   cloud_firestore: ^6.0.0
-  intl: ^0.20.2
+  intl: any
   flutter_easyloading: ^3.0.5
   bot_toast: ^4.1.3
+  animated_custom_dropdown: ^3.1.1
+  provider: ^6.1.5
   
 
 dev_dependencies:
@@ -28,8 +31,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/images/
