--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   bot_toast: ^4.1.3
   animated_custom_dropdown: ^3.1.1
   provider: ^6.1.5
+  firebase_auth: ^6.0.1
+  location: ^8.0.1
+  google_maps_flutter: ^2.12.3
   
 
 dev_dependencies:
