--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   animated_custom_dropdown: ^3.1.1
   provider: ^6.1.5
   firebase_auth: ^6.0.1
+  google_sign_in: ^6.2.1
   location: ^8.0.1
   google_maps_flutter: ^2.12.3
   
